--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="800"></canvas>
+
+    <div class="title"><img src="./img/title_banner.png" alt="Tree of Life"></div>
+    <div class="title">Watch a forest grow from a single seed.</div>
+    <canvas id="gameWorld" tabindex="1" width="1200" height="800"></canvas>
 </body>
 
 <style>
@@ -19,6 +22,12 @@
         display: block;
         border: 1px solid grey;
         background: #b6e3b6;
+    }
+
+    .title {
+        text-align: center;
+        margin: auto;
+        width: 50%;
     }
 </style>
 
