--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="col-3">
         <h5 style="text-align: center;">Welcome to Tree of Life</h5>
         <p>This is a simulation about tree growth and seed distribution.</p>
-        <p>The tree growth goes through 5 stages before dying:
+        <p>The tree goes through 5 stages before dying:
           <ul>
             <li>Seedling stage</li>
             <li>Sprout stage</li>
@@ -55,13 +55,13 @@
           Once the tree has reached the Mature tree stage, it has a 45% chance of dropping a seed within 3 cells of it.
         </p>
         <p>
-          The seed drop occurs on a randomized interval (150 ticks +- 10%) before the tree dies.
+          The seed drop occurs on a randomized interval (150 ticks +- 10%) from the tree's maturity until the tree dies.
         </p>
         <p>
-          The age of the tree is also randomized (1000 ticks +- 10%)
+          The age of the tree is also randomized (1000 ticks +- 10%).
         </p>
         <p>
-          1 second = 60 ticks
+          1 second = 60 ticks.
         </p>
 
       </div>
